sql/si_objects.h
@@ -509,6 +509,12 @@ int num_slaves_attached();
 */
 int disable_slave_connections(bool disable);
 
+/*
+  Set state where replication is blocked (TRUE) or not blocked (FALSE)
+  from starting. Include reason for feedback to user.
+*/
+void block_replication(bool block, char *reason);
+
 /**
   Enumeration of the incidents that can occur on the master.
 */
